Update project to allow compiling with JDK 11
- Update to version 2.1.0-SNAPSHOT
- Exclude Affinity to avoid 'type is ambiguous' compilation errors with JDT
- Configure correctly HBase Minicluster to avoid network errors