@@ -12,7 +12,7 @@
 
     <groupId>org.atlanmod.neoemf</groupId>
     <artifactId>neoemf</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>NeoEMF</name>
     <description>An EMF persistence layer</description>
@@ -106,9 +106,21 @@
     </developers>
 
     <properties>
-        <argLine.global>-Xmx2g</argLine.global>
+        <argLine.global>-Xmx2g --illegal-access=warn --illegal-access=permit --add-exports java.base/jdk.internal.ref=ALL-UNNAMED</argLine.global>
         <commons.version>1.0.6</commons.version>
         <emf.version>2.15.0</emf.version>
+        <jdk.version>11</jdk.version>
+        <maven.compiler.source>${jdk.version}</maven.compiler.source>
+        <maven.compiler.target>${jdk.version}</maven.compiler.target>
+        <!-- New properties -->
+        <!--
+            Guava versions > 23 removes the method:
+            'void com.google.common.util.concurrent.Futures.addCallback(ListenableFuture, FutureCallback)'
+            needed by Hadoop's  hdfs-server
+        -->
+        <guava.version>23.6-jre</guava.version>
+        <jdk.module.illegalAccess>deny</jdk.module.illegalAccess>
+        <junit.version>5.7.1</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -153,8 +165,40 @@
                 <scope>test</scope>
             </dependency>
 
+            <!-- General purpose libraries -->
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <!-- Additional dependencies for JDK 11 -->
+        <!-- TODO: check if really needed -->
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
@@ -205,11 +249,11 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>5.1.1</version>
+                    <version>5.1.2</version>
                     <extensions>true</extensions>
                     <configuration>
                         <instructions>
-                            <Bundle-Version>2.0.2.${maven.build.timestamp}</Bundle-Version>
+                            <Bundle-Version>${project.version}</Bundle-Version>
                             <Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
                             <Import-Package/>
                             <Embed-Dependency>
@@ -299,6 +343,9 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0-M5</version>
                     <configuration>
+                        <argLine>
+                            --illegal-access=permit --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+                        </argLine>
                         <excludedGroups>slowest</excludedGroups>
                     </configuration>
                 </plugin>
@@ -317,6 +364,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.3.0</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.6</version>
                 </plugin>
             </plugins>
         </pluginManagement>
